# tls-parser

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml  security-audit.yml
benches/: bench_dh.rs  bench_handshake.rs
examples/: get-ciphersuite-info.rs  parse-from-pcap.rs
fuzz/: Cargo.toml
fuzz/fuzzers/: parse_dtls_plaintext.rs  parse_tls_extension.rs  parse_tls_plaintext.rs
scripts/: all_ciphersuites.sql  convert_ciphers_to_rust.py  extract-iana-ciphers.py  extract-iana-ciphers2.py  query.sh  tls-ciphersuites.txt
src/: certificate_transparency.rs  common.rs  der.rs  dtls.rs  dtls_combine.rs  lib.rs  tls.rs  tls_alert.rs  tls_ciphers.rs  tls_debug.rs  tls_dh.rs  tls_ec.rs  tls_extensions.rs  tls_handshake.rs  tls_message.rs  tls_record.rs  tls_records_parser.rs  tls_serialize.rs  tls_sign_hash.rs  tls_states.rs  utils.rs  x509.rs
tests/: certificate_transparency.rs  tls_dh.rs  tls_extensions.rs  tls_handshake.rs  tls_tls13.rs
