[package]
description = "Parser for the TLS protocol"
license = "MIT/Apache-2.0"
keywords = ["TLS","SSL","protocol","parser","nom"]
homepage = "https://github.com/rusticata/tls-parser"
repository = "https://github.com/rusticata/tls-parser.git"
documentation = "https://docs.rs/tls-parser"
name = "tls-parser"
version = "0.10.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["network-programming", "parser-implementations"]
edition = "2018"

readme = "README.md"
build = "build.rs"

include = [
  "LICENSE-*",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "benches/*.rs",
  "build.rs",
  "src/*.rs",
  "tests/*.rs",
  "scripts/tls-ciphersuites.txt",
  "scripts/extract-iana-ciphers.py"
]

[lib]
name = "tls_parser"

[features]
default = []
serialize = ["cookie-factory"]
unstable = []

[dependencies]
cookie-factory = { version="0.3", optional=true }
enum_primitive = "^0.1"
nom = "6.0"
nom-derive = "0.8"
phf = "0.8"
rusticata-macros = "3.0"

[dev-dependencies]
hex-literal = "0.3"
pretty_assertions = "0.7"

[build-dependencies]
phf_codegen = "0.10"

[badges]
travis-ci = { repository = "rusticata/tls-parser" }
