[package]
description = "Parser for the TLS protocol"
license = "MIT/Apache-2.0"
keywords = ["TLS","SSL","protocol","parser","nom"]
homepage = "https://github.com/rusticata/tls-parser"
repository = "https://github.com/rusticata/tls-parser.git"
documentation = "https://docs.rs/tls-parser"
name = "tls-parser"
version = "0.12.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["network-programming", "parser-implementations"]
edition = "2018"

readme = "README.md"
build = "build.rs"

include = [
  "LICENSE-*",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "benches/*.rs",
  "build.rs",
  "src/*.rs",
  "tests/*.rs",
  "scripts/tls-ciphersuites.txt",
  "scripts/extract-iana-ciphers.py"
]

[lib]
name = "tls_parser"

[features]
default = ["std"]
serialize = ["cookie-factory"]
std = []
unstable = []

[dependencies]
cookie-factory = { version="0.3", optional=true }
num_enum = "0.5.4"
nom = "7.0"
nom-derive = "0.10"
phf = "0.11"
rusticata-macros = "4.0"

[dev-dependencies]
clap = { version="3.2" }
hex-literal = "0.3"
pretty_assertions = "1.0"

[build-dependencies]
phf_codegen = "0.11"

[badges]
travis-ci = { repository = "rusticata/tls-parser" }
