[package]
description = "Parser for the TLS protocol"
license = "MIT/Apache-2.0"
keywords = ["TLS","SSL","protocol","parser","nom"]
homepage = "https://github.com/rusticata/tls-parser"
repository = "https://github.com/rusticata/tls-parser.git"
documentation = "https://docs.rs/tls-parser"
name = "tls-parser"
version = "0.12.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["network-programming", "parser-implementations"]
edition = "2018"
rust-version = "1.63"

readme = "README.md"
build = "build.rs"

include = [
  "LICENSE-*",
  ".gitignore",
  "Cargo.toml",
  "benches/*.rs",
  "build.rs",
  "examples/*.rs",
  "src/*.rs",
  "tests/*.rs",
  "scripts/tls-ciphersuites.txt",
  "scripts/extract-iana-ciphers.py"
]

[lib]
name = "tls_parser"

[features]
default = ["std"]
serialize = ["cookie-factory"]
std = ["phf/std"]
unstable = []

[dependencies]
cookie-factory = { version="0.3", optional=true }
num_enum = "0.7.2"
nom = "7.0"
nom-derive = "0.10"
phf = { version="0.11", default-features=false }
rusticata-macros = "4.0"

[dev-dependencies]
clap = { version="4.5", features = ["derive"]}
hex-literal = "0.4"
pretty_assertions = "1.0"

[build-dependencies]
phf_codegen = "0.11"

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "nom",
  "nom::*",
  "nom_derive::*",
  "num_enum::*",
  "phf::map::Map",
  "rusticata_macros",
]
